tests/pos/i23817/file_1.scala
sealed trait N[T]
case class MakeTuple[T <: Tuple](v: T) extends N[T]
