tests/neg/parser-stability-12.scala
trait x0[]
     trait x1[x1 <:x0]
     extends x1[
